Styliser page d'accueil, modifications de base aux nav des pages html, préparer css en mode SCSS.

--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <header>
-      <h1>TP1 - Création d'un profil web</h1>      
+    <header id="accueil">
+      <h1>TP1 - Création d'un profil web</h1> 
+      <h2>L'équipe <span>ÉLITE</span></h2>     
       <nav>
         <ul>
-          <li><a href="index.html">Acceuil</a></li>
-          <li><a href="membre1.html">Membre 1</a></li>
-          <li><a href="membre2.html">Membre 2</a></li>
-          <li><a href="membre3.html">Membre 3</a></li>
-          <li><a href="membre4.html">Membre 4</a></li>
-          <li><a href="membre5.html">Membre 5</a></li>
+          <li><a href="index.html" class="actif">ACCUEIL</a></li>
+          <li><a href="membre1.html">PIER-ALEXANDRE</a></li>
+          <li><a href="membre2.html">ALEXANDRE</a></li>
+          <li><a href="membre3.html">BENOÎT</a></li>
+          <li><a href="membre4.html">JACQUELINE</a></li>
+          <li><a href="membre5.html">PATRICIA</a></li>
         </ul>
       </nav>
     </header>
