Rédaction de la page "membre 2" (Alexandre Boudreault)

--- a/membre2.html
+++ b/membre2.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Membre 2</title>
+    <title>Alexandre Boudreault</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
-<body>
+<body style="background-color: rgb(56, 55, 55); color: aliceblue;">
     <div id="membre2">
         
-        <header class="membre2">
-            <h1>Nom</h1>
-            <h2>Profil (aspirant développeur/designer, front-end, back-end, full-stack)</h2>
+        <header class="membre2" style="background-color: rgb(125, 250, 229); color: rgb(56, 55, 55);">
+            <h1>Alexandre Boudreault</h1>
+            <h2 style="color: rgb(56, 55, 55);">Profil (Attiré de part égale par le front-end et back-end. Qui sait ? Je suis peut-être un full-stack.)</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">ACCUEIL</a></li>
@@ -28,30 +28,43 @@
         <main>
             <section>
                 <h3>Objectifs</h3>
-                <h4>Court terme (après la formation) </h4>
+                <h4>Court terme (après la formation)</h4>
+                <p>Trouver un emploi avec une équipe de travail qui me représente, afin de bâtir ma nouvelle profession dans un esprit sain. </p>
                 <h4>Moyen terme (2-5 ans) </h4>
+                <p>Devenir un vrai professionel du domaine, avec un emploi stable m'offrant une bonne équipe, un bon salaire et d'excellents avatanges.</p>
                 <h4>Long terme (5-10 ans)</h4>
+                <p>Être une légende.</p>
                 <h4>Quelles sont vos attentes salariales (faites une recherche sur le salaire moyen du poste et considérez votre expérience)?</h4>
+                <p>Entre 50 000 $ et 1 000 000 $ par année, le tout sera à discuter autour d'un vin que je choisirai.</p>
             </section>
             <section>
                 <h3>À propos de vous</h3>
                 <h4>Quels sont vos qualités (qu'est-ce que les gens diraient de vous)?</h4>
+                <p>Je suis une personne passionnée, positive, qui aime rire et faire rire afin de prendre la vie légère.</p>
                 <h4>Quel est votre défaut (préférable de savoir, mais nécessaire de le mentionner si on ne vous pose pas la question)?</h4>
+                <p>Mon non verbal qui est toujours pareil. Content ou fâché, j'ai toujours la même expression faciale. C'est une chose sur laquelle je travail depuis un peu plus d'un an, afin d'améliorer mes relations "one on one".</p>
                 <h4>Comment aimez-vous travaillez en équipe (aire ouverte au bureau, discord à distance)?</h4>
+                <p>J'aimerais beaucoup un mode de travail hybride, le confort de mon environnement personnel me rend plus productif, mais ma santé mental a besoin d'interativité réel avec d'autres humains.</p>
                 <h4>Quelle est votre motivation à intégrer le domaine?</h4>
+                <p>L'argent, je vais pouvoir me payer un lifting du visage. Bon, de cette façon je n'aurai pas réglé le problème d'avoir toujours la même expression faciale, mais au moins j'aurai toujours l'air content.</p>
                 <h4>Quels sont vos intérêts/loisirs particuliers?</h4>
+                <p>Je suis musicien, j'ai passé mes 22 dernières années à aller voir des spectacles, à jouer sur des scènes ou à être sonorisateur. En étant sonorisateur, j'ai d'ailleurs eu la chance de faire une tournée à l'international, ce qui m'a fait découvrir une passion pour les voyages.</p>
             </section>
             <section>
                 <h3>Expérience avec le poste</h3>
                 <h4>Quels sont les logiciels que vous utilisez/préférez?</h4>
+                <p>C'est quoi un logiciel ?</p>
                 <h4>Quels sont les projets sur lesquels vous avez travaillés?</h4>
-                <h4>Quel est le projet dont vous êtes le plus fier (pourquoi, difficultés rencontrées/solutions et exemple)?
-                </h4>
+                <p>Google c'est moi !</p>
+                <h4>Quel est le projet dont vous êtes le plus fier (pourquoi, difficultés rencontrées/solutions et exemple)?</h4>
+                <p>La marionnette de sorcière que j'ai fait à la maternelle. Ma dextérité n'est pas ma force, il faut donc imaginé comment elle était faible à l'âge de 5 ans. Par contre, elle est toujours intact et à toujours l'air d'une sorcière. Demandez à ma mère !</p>
             </section>
             <section>
                 <h3>Expériences additionnelles</h3>
                 <h4>Quelles sont vos qualifications/certifications additionnelles pertinentes</h4>
+                <p>J'ai mon permis de conduire.</p>
                 <h4>Quels sont vos savoirs-être (ponctualité, organisation, sociabilité, capacité à travailler sous pression/périodes prolongées, service à la clientèle, travail d'équipe, etc.)</h4>
+                <p>Incapable d'être en retard ou pile à l'heure, j'angoisse si non. Je suis habitué au travail sous pression par mon expérience en événementiel, je suis sociable, j'aime tout le monde, j'ai des belles chemise ce qui fait que les autre me voit comme un modèle à respecter.</p>
             </section>
         </main>
 
