Modification d'une réponse (travail d'équipe) dans le fichier membre5.html

--- a/membre5.html
+++ b/membre5.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Membre 5</title>
+    <title>Patricia Massie</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -61,8 +61,9 @@
                 <p>Je suis une personne exigeante, autant envers moi-même qu’envers les autres. J’ai tendance à avoir les mêmes attentes envers les autres que j’ai envers moi-même, mais il ne faut pas oublier qu’on a tous des forces différentes et c’est ce qui fait la force d’une équipe. Heureusement, mon côté sensible et compréhensif fait en sorte que, lorsque mes attentes sont trop élevées, j’arrive rapidement à me ramener les deux pieds sur terre vers des attentes plus raisonnables.</p>
                 
                 <h4>Comment aimez-vous travaillez en équipe (aire ouverte au bureau, discord à distance)?</h4>
-                <strong>Peu importe la méthode de travail d’une équipe, je crois que la clé est la communication! </strong>
-                <p>Après, ça dépend de l’ampleur du projet. Étant une personne très autonome, je peux recevoir des directives et faire ce qu’on attend de moi, dans un délai donné, de façon autonome. Cependant, plus le projet est gros et plus il est important de communiquer et de bien communiquer. Je crois qu’il est important de se rencontrer à une fréquence définie en personne, préférablement, ou en vidéo-conférence. </p>
+                <strong>J'aimerais travailler en mode hybride.</strong>
+                <p>De la maison : J'ai la capacité de recevoir des directives et de faire ce qu’on attend de moi, dans un délai donné, de façon autonome.</p>
+                <p>Au bureau : Il est plus facile de communiquer, de socialiser et de créer des liens solides avec son équipe en présentiel.</p>
                 <p>L’organisation d’un projet demande la collaboration et la communication de chacun des membres et l’avancement du projet demande de l’autonomie. Pour ma part, je suis capable de bien faire les deux.</p>
 
                 <h4>Quelle est votre motivation à intégrer le domaine?</h4>
