Corrections de fautes orthographes - Jacqueline

--- a/membre4.html
+++ b/membre4.html
@@ -36,13 +36,13 @@
             <section class="objectifs">
                 <h3>OJBECTIFS</h3>
                 <div>
-                    <h4>Court terme: </h4>
+                    <h4>Court terme:</h4>
                     <p>Obtenir un emploi qui me permettrait d'approfondir mes connaissances en développement Web. Je suis à la recherche d'un emploi au sein d'une compagnie qui partage les même valeurs que moi: le respect, la reconnaissance, le travail d'équipe, la positivité et l'intégrité.</p>
-                    <h4>Moyen terme: </h4>
-                    <p>Je souhaite de bien m'établir au sein d'une compagnie tout en continuant mon apprentissage en développement Web.</p>
-                    <p>Je suis ouverte à la possibilité de devenir travailleur autonome</p>
-                    <h4>Long terme: </h4>
-                    <p>Je souhaite travailler sur des projets qui me passionnent et devenir un mentor pour un développeur junior.</p>
+                    <h4>Moyen terme:</h4>
+                    <p>Je souhaite de bien m'établir au sein d'une compagnie tout en continuant mon apprentissage en développement Web et possiblement l'intelligence artificielle.</p>
+                    <p>Je suis ouverte à la possibilité de devenir travailleur autonome.</p>
+                    <h4>Long terme:</h4>
+                    <p>Je souhaite travailler sur des projets Web qui me passionnent et devenir un mentor pour un développeur junior.</p>
                     <h4>Attentes salariales:</h4>
                     <p>Idéalement, 65 000$-75 000$ à 35h/semaine en mode hybride avec 3 semaines de vacances.</p>
                 </div>
@@ -53,9 +53,9 @@
                 <div>
                     <h4>Logiciels que vous utilisez/préférez:</h4>
                     <p>Logiciel: Visual Studio Code</p>
-                    <p>Frameworks: Vue.js, Laravel, Bootstrap</p>
-                    <p>Langages: PHP, SQL, JavaScript, CSS (et SCSS), HTML5, </p>
-                    <p>Autres: La méthodologie MVC et l'interface de base de données PhpmyAdmin avec MySQL comme sysème de gestion de BDD</p>
+                    <p>Frameworks: Vue.js, Laravel, Bootstrap, Tailwind</p>
+                    <p>Langages: PHP, SQL, JavaScript, CSS (et SCSS), HTML5</p>
+                    <p>Autres: La méthodologie MVC et l'interface de base de données PhpmyAdmin avec MySQL comme système de gestion de BDD</p>
                     <h4>Projets sur lesquels vous avez travaillés:</h4>
                     <p>Plusieurs projets d'école contenant des APIs, des algorithmes, la gestion de BDD, et le UX/UI.</p>
                     <h4>Projet dont vous êtes le plus fier:</h4>
