--- a/membre5.html
+++ b/membre5.html
@@ -44,11 +44,11 @@
                     Avoir un emploi stable (backend ou fullstack) qui ne me limite pas et qui continue de me challenger dans un environnement où j’ai du plaisir tout en ayant une qualité de vie agréable : salaire décent et travail en mode hybride (dans le but de limiter mes déplacements).
                 </p>
                 <p>
-                    <strong>PLUS</strong> 30-35h max / semaine, possibilité de prendre des vacances à mes frais dans l’année en dehors des vacances payées.
+                    <strong>PLUS :</strong> horaire de 30-35h/semaine max, possibilité de prendre des vacances à mes frais dans l’année en dehors des vacances payées.
                 </p>
                 
                     <h4>Quelles sont vos attentes salariales (faites une recherche sur le salaire moyen du poste et considérez votre expérience)?</h4>
-                <p>Un salaire qui me permet de vivre et non de survivre et qui reflète ma juste valeur.</p>
+                <p>Un salaire qui me permet de vivre et non de survivre et, surtout, qui reflète ma juste valeur.</p>
             </section>
 
             <section>
@@ -91,10 +91,10 @@
                 </ul>
                     
                 <h4>Quels sont les projets sur lesquels vous avez travaillés?</h4>
-                <p> Projet Web 1 (voir prochaine question pour les détails du projet)</p>
+                <p>Projet Web 1 (voir prochaine question pour les détails du projet)</p>
                 <p>Création d’un algorithme de jeu de tic-tac-toe pour tenter de battre l’algorithme de Julien. Ce projet a été fait en équipe et est encore en cours (avec Jackie et P-A). Nous avons l’intention de le terminer sur notre temps libre puisque nous avons pris beaucoup de plaisir à chercher des algorithmes pour s’assurer d’une victoire, ou minimalement d’un match null à tout coup.</p>
                 <p>Plusieurs projets scolaires demandant d’implémenter les opérations CRUD manuellement.</p>
-                <p>Plusieurs projets impliquent des appels à des API en JavaScript.</p>
+                <p>Plusieurs projets scolaires impliquant des appels à des API en JavaScript.</p>
 
                 <h4>Quel est le projet dont vous êtes le plus fier (pourquoi, difficultés rencontrées/solutions et exemple)?</h4>
                 <p>Pour le moment, le Projet Web 1 me rend assez fière. C’est la première fois, dans la formation, où on nous demandait de créer un projet complet : design, intégration et backend. La dynamisation du site Web avec JavaScript était optionnelle, mais je me suis donné le défi personnel d’en faire un minimum dans le but de mettre mes apprentissages en pratique. Premièrement, j’ai réussi à terminer le projet et à faire plus que demandé dans un délai inférieur au délai donné. La portion design et intégration du site Web est bien exécuté et le responsive s’ajuste bien. J’ai implémenté des fonctionnalités dans la portion backend du projet dont je suis fière. La fonctionnalité la plus difficile que j’ai créé est de permettre au client de modifier l’ordre d’affichage de ses catégories et d’avoir un contrôle à 100%. J’ai su demander conseils quand j’en ai eu besoin et adapter le projet au besoin. Malgré l’ampleur du projet, j’ai aussi su garder une très bonne organisation de mon temps, de mes fichiers et de mon code, ce qui est très important pour moi.</p>
@@ -104,6 +104,7 @@
                 <h3>Expériences additionnelles</h3>
                 <h4>Quelles sont vos qualifications/certifications additionnelles pertinentes</h4>
                 <p>AEC en design et intégration Web au Cégep TR.</p>
+                <p>AEC en conception et programmation de sites Web au CSTJ.</p>
 
                 <h4>Quels sont vos savoirs-être (ponctualité, organisation, sociabilité, capacité à travailler sous pression/périodes prolongées, service à la clientèle, travail d'équipe, etc.)</h4>
                 <ul>
