Ajout des informations de Pier-Alexandre.

--- a/membre1.html
+++ b/membre1.html
@@ -29,29 +29,43 @@
             <section>
                 <h3>Objectifs</h3>
                 <h4>Court terme (après la formation) </h4>
+                <p>Travailler dans une entreprise jeune, flexible et dynamique dans laquelle je vais pouvoir m’épanouir.</p>
                 <h4>Moyen terme (2-5 ans) </h4>
+                <p>Travailler dans une entreprise jeune, flexible et dynamique dans laquelle je vais pouvoir m’épanouir, mais avec un meilleur salaire et de meilleures conditions.</p>
                 <h4>Long terme (5-10 ans)</h4>
+                <p>Être développeur sénior et avoir d’expériences pour être potentiellement freelance.</p>
                 <h4>Quelles sont vos attentes salariales (faites une recherche sur le salaire moyen du poste et considérez votre expérience)?</h4>
+                <p>Je désire commencer entre 45 000 et 55 000$ par année.</p>
             </section>
             <section>
                 <h3>À propos de vous</h3>
                 <h4>Quels sont vos qualités (qu'est-ce que les gens diraient de vous)?</h4>
+                <p>Je sais faire preuve de sensibilité dans mes relations personnelles et professionnelles autant que je suis une personne très logique qui aime les énigmes et les puzzles, car je crois que le savoir-être est aussi important que le savoir-faire. Lorsque je programme, je suis autonome et persévérant.</p>
                 <h4>Quel est votre défaut (préférable de savoir, mais nécessaire de le mentionner si on ne vous pose pas la question)?</h4>
+                <p>Je suis désorganisé. Cependant, avec le temps j’ai appris à mettre en place des outils qui favorisent ma capacité à me structurer comme l’utilisation de mon agenda par exemple.</p>
                 <h4>Comment aimez-vous travaillez en équipe (aire ouverte au bureau, discord à distance)?</h4>
+                <p>Aucune préférence.</p>
                 <h4>Quelle est votre motivation à intégrer le domaine?</h4>
+                <p>Étant passionné par la programmation et particulièrement l’algorithmie, mon niveau de motivation est très élevé actuellement. </p>
                 <h4>Quels sont vos intérêts/loisirs particuliers?</h4>
+                <p>Je fais de la musique professionnellement depuis plus de 15 ans de l’écriture à la composition en passant par l’interprétation. J’aime les jeux vidéos (PlayStation - Nintendo) et je suis cinéphile. Avec ma copine, on fait beaucoup d’hiking et de bootcamp. Aussi, nous adorons cuisiner en équipe.</p>
             </section>
             <section>
                 <h3>Expérience avec le poste</h3>
                 <h4>Quels sont les logiciels que vous utilisez/préférez?</h4>
+                <p>Au courant de ma formation, nous abordons HTML, CSS, PHP, JavaScript, Vue.js, Laravel, Git, GitHub, WordPress, XD, Photoshop, Illustrator et plus encore.</p>
                 <h4>Quels sont les projets sur lesquels vous avez travaillés?</h4>
+                <p>Préférablement sur des applications web exigeant beaucoup d’algorithmie.</p>
                 <h4>Quel est le projet dont vous êtes le plus fier (pourquoi, difficultés rencontrées/solutions et exemple)?
                 </h4>
+                <p>Jusqu’à présent, mon projet web 1 de ma Formation Continue a été mon projet le plus complet et autonome. J’en suis fier même s’il date et que je serais meilleur si je devais recommencer aujourd’hui.</p>
             </section>
             <section>
                 <h3>Expériences additionnelles</h3>
                 <h4>Quelles sont vos qualifications/certifications additionnelles pertinentes</h4>
+                <p>Après 15 ans de carrière dans la musique, j’ai développé plusieurs compétences de façon autodidacte. Dont la gestion des réseaux sociaux, le graphisme, la gestion de projet, l’évènementiel, la rédaction de contrats, etc. J'ai aussi une formation en synergologie (language non-verbal) à l'Institut québécois de Synergologie.</p>
                 <h4>Quels sont vos savoirs-être (ponctualité, organisation, sociabilité, capacité à travailler sous pression/périodes prolongées, service à la clientèle, travail d'équipe, etc.)</h4>
+                <p>Je suis une personne ponctuelle à limite du T.O.C., mais heureusement ça ne fait de mal à personne. Je suis extrêmement sociable et je mets un point d’honneur à entretenir mes relations interpersonnelles. J’aime travailler autant en équipe qu’en contact avec les clients.</p>
             </section>
         </main>
         
