Correction d'une faute d'orthographe de Pier-Alexandre

--- a/membre1.html
+++ b/membre1.html
@@ -33,7 +33,7 @@
                 <h4>Moyen terme (2-5 ans) </h4>
                 <p>Travailler dans une entreprise jeune, flexible et dynamique dans laquelle je vais pouvoir m’épanouir, mais avec un meilleur salaire et de meilleures conditions.</p>
                 <h4>Long terme (5-10 ans)</h4>
-                <p>Être développeur sénior et avoir d’expériences pour être potentiellement freelance.</p>
+                <p>Être développeur sénior et avoir assez d’expériences pour être potentiellement freelance.</p>
                 <h4>Quelles sont vos attentes salariales (faites une recherche sur le salaire moyen du poste et considérez votre expérience)?</h4>
                 <p>Je désire commencer entre 45 000 et 55 000$ par année.</p>
             </section>
