Ajout du nom de Pier-Alexandre au top de la page.

--- a/membre1.html
+++ b/membre1.html
@@ -11,8 +11,8 @@
     <div id="membre1">
 
         <header class="membre1">
-            <h1>Nom</h1>
-            <h2>Profil (aspirant développeur/designer, front-end, back-end, full-stack)</h2>
+            <h1>Pier-Alexandre</h1>
+            <h2>Profil (aspirant développeur full-stack)</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">ACCUEIL</a></li>
