--- a/membre1.html
+++ b/membre1.html
@@ -12,7 +12,7 @@
 
         <header class="membre1">
             <h1>Pier-Alexandre</h1>
-            <h2>Profil (aspirant développeur full-stack)</h2>
+            <h2>Aspirant développeur full-stack</h2>
             <nav>
                 <ul>
                     <li><a href="index.html">ACCUEIL</a></li>
@@ -28,6 +28,7 @@
         <main>
             <section>
                 <h3>Objectifs</h3>
+                <p class="ligne">_______________________________________________________________________________________________________________________________</p>
                 <h4>Court terme (après la formation) </h4>
                 <p>Travailler dans une entreprise jeune, flexible et dynamique dans laquelle je vais pouvoir m’épanouir.</p>
                 <h4>Moyen terme (2-5 ans) </h4>
@@ -39,6 +40,7 @@
             </section>
             <section>
                 <h3>À propos de vous</h3>
+                <p class="ligne">_______________________________________________________________________________________________________________________________</p>
                 <h4>Quels sont vos qualités (qu'est-ce que les gens diraient de vous)?</h4>
                 <p>Je sais faire preuve de sensibilité dans mes relations personnelles et professionnelles autant que je suis une personne très logique qui aime les énigmes et les puzzles, car je crois que le savoir-être est aussi important que le savoir-faire. Lorsque je programme, je suis autonome et persévérant.</p>
                 <h4>Quel est votre défaut (préférable de savoir, mais nécessaire de le mentionner si on ne vous pose pas la question)?</h4>
@@ -52,6 +54,7 @@
             </section>
             <section>
                 <h3>Expérience avec le poste</h3>
+                <p class="ligne">_______________________________________________________________________________________________________________________________</p>
                 <h4>Quels sont les logiciels que vous utilisez/préférez?</h4>
                 <p>Au courant de ma formation, nous abordons HTML, CSS, PHP, JavaScript, Vue.js, Laravel, Git, GitHub, WordPress, XD, Photoshop, Illustrator et plus encore.</p>
                 <h4>Quels sont les projets sur lesquels vous avez travaillés?</h4>
@@ -62,6 +65,7 @@
             </section>
             <section>
                 <h3>Expériences additionnelles</h3>
+                <p class="ligne">_______________________________________________________________________________________________________________________________</p>
                 <h4>Quelles sont vos qualifications/certifications additionnelles pertinentes</h4>
                 <p>Après 15 ans de carrière dans la musique, j’ai développé plusieurs compétences de façon autodidacte. Dont la gestion des réseaux sociaux, le graphisme, la gestion de projet, l’évènementiel, la rédaction de contrats, etc. J'ai aussi une formation en synergologie (language non-verbal) à l'Institut québécois de Synergologie.</p>
                 <h4>Quels sont vos savoirs-être (ponctualité, organisation, sociabilité, capacité à travailler sous pression/périodes prolongées, service à la clientèle, travail d'équipe, etc.)</h4>
