Ajout du meme à Patricia - Jacqueline

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="membre2.html" @mouseover="changerImage('medias/test2.webp')">ALEXANDRE</a></li>
             <li><a href="membre3.html" @mouseover="changerImage('medias/test3.webp')">BENOÎT</a></li>
             <li><a href="membre4.html" @mouseover="changerImage('medias/jacqueline.jpg')">JACQUELINE</a></li>
-            <li><a href="membre5.html" @mouseover="changerImage('medias/test5.webp')">PATRICIA</a></li>
+            <li><a href="membre5.html" @mouseover="changerImage('medias/patricia.jpg')">PATRICIA</a></li>
           </ul>
         </nav>
       </header>
