--- a/membre3.html
+++ b/membre3.html
@@ -11,7 +11,7 @@
     <div id="membre3">
     
         <header class="membre3">
-            <h1>Nom</h1>
+            <h1>Benoit Chevalier</h1>
             <h2>Profil (aspirant développeur/designer, front-end, back-end, full-stack)</h2>
             <nav>
                 <ul>
